# tsokoban

./: CMakeLists.txt  README.md  action.h  game.c  game.h  level.c  level.h  main.c  vector.c  vector.h
AI_solutions/: solution1
sokobal_levels/: sokobal_level0  sokobal_level1  sokobal_level10  sokobal_level11  sokobal_level12  sokobal_level13  sokobal_level14  sokobal_level15  sokobal_level16  sokobal_level17  sokobal_level18  sokobal_level19  sokobal_level2  sokobal_level20  sokobal_level21  sokobal_level22  sokobal_level23  sokobal_level24  sokobal_level25  sokobal_level26  sokobal_level27  sokobal_level28  sokobal_level29  sokobal_level3  sokobal_level30  sokobal_level31  sokobal_level32  sokobal_level33  sokobal_level34  sokobal_level35  sokobal_level36  sokobal_level37  sokobal_level38  sokobal_level39  sokobal_level4  sokobal_level40  sokobal_level41  sokobal_level42  sokobal_level43  sokobal_level44  (+11 more)
sokoban_levels/: sokoban_level0  sokoban_level1  sokoban_level10  sokoban_level11  sokoban_level12  sokoban_level13  sokoban_level14  sokoban_level15  sokoban_level16  sokoban_level17  sokoban_level18  sokoban_level19  sokoban_level2  sokoban_level20  sokoban_level21  sokoban_level22  sokoban_level23  sokoban_level24  sokoban_level25  sokoban_level26  sokoban_level27  sokoban_level28  sokoban_level29  sokoban_level3  sokoban_level30  sokoban_level31  sokoban_level32  sokoban_level33  sokoban_level34  sokoban_level35  sokoban_level36  sokoban_level37  sokoban_level38  sokoban_level39  sokoban_level4  sokoban_level40  sokoban_level41  sokoban_level42  sokoban_level43  (+13 more)
