cmake_minimum_required(VERSION.3.10)
project(tsokoban)...................
set.(CMAKE_C_STANDARD.99)...........
....................................
add_link_options(-lm)...............
....................................
set.(SOURCES.main.c)................
add_executable(tsokoban.${SOURCES}).
....................................